agragado de un endpopint para cargar todo junto en business
